RP-737 Add check for core inactivation where non-core additional axiom exists