@@ -1,42 +1,35 @@
-package org.ihtsdo.termserver.scripting.reports.managedService;
+package org.ihtsdo.termserver.scripting.reports.managed_service;
 
-import java.io.IOException;
 import java.util.*;
-import java.util.stream.Collectors;
 
 import org.ihtsdo.otf.exception.TermServerScriptException;
 import org.ihtsdo.termserver.scripting.ReportClass;
+import org.ihtsdo.termserver.scripting.TermServerScript;
 import org.ihtsdo.termserver.scripting.domain.*;
 import org.ihtsdo.termserver.scripting.reports.TermServerReport;
 import org.ihtsdo.termserver.scripting.util.SnomedUtils;
 import org.snomed.otf.scheduler.domain.*;
 import org.snomed.otf.scheduler.domain.Job.ProductionStatus;
 import org.snomed.otf.scheduler.domain.JobParameter.Type;
-import org.snomed.otf.script.dao.ReportSheetManager;
 
 /**
  * RP-456 Report to find concepts in the core module that have active
  * axioms in the target module
  */
 
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 public class MultipleModuleAxioms extends TermServerReport implements ReportClass {
 
-	private static final Logger LOGGER = LoggerFactory.getLogger(MultipleModuleAxioms.class);
-
-	public static String FILTER_CORE = "Ignore original core concepts";
+	public static final String FILTER_CORE = "Ignore original core concepts";
 	private boolean ignoreOriginalCore = true;
 	
-	public static void main(String[] args) throws TermServerScriptException, IOException {
+	public static void main(String[] args) throws TermServerScriptException {
 		Map<String, String> params = new HashMap<>();
 		params.put(FILTER_CORE, "true");
-		TermServerReport.run(MultipleModuleAxioms.class, args, params);
+		TermServerScript.run(MultipleModuleAxioms.class, args, params);
 	}
-	
+
+	@Override
 	public void init (JobRun run) throws TermServerScriptException {
-		ReportSheetManager.targetFolderId = "1mvrO8P3n94YmNqlWZkPJirmFKaFUnE0o"; //Managed Service
 		subsetECL = run.getParamValue(ECL);
 		super.init(run);
 		
@@ -46,13 +39,14 @@ public class MultipleModuleAxioms extends TermServerReport implements ReportClas
 			throw new TermServerScriptException("Multiple Module Axioms report cannot be run against MAIN");
 		}
 	}
-	
+
+	@Override
 	public void postInit() throws TermServerScriptException {
 		String[] columnHeadings = new String[] {
 				"Id, FSN, SemTag, Concept Module, Core Axiom ID, EffectiveTime, Non-core Axiom Id, EffectiveTime"};
 		String[] tabNames = new String[] {	
 				"Concepts with Axioms in Multiple Modules"};
-		super.postInit(tabNames, columnHeadings, false);
+		super.postInit(GFOLDER_MS, tabNames, columnHeadings, false);
 	}
 	
 	@Override
@@ -70,7 +64,8 @@ public class MultipleModuleAxioms extends TermServerReport implements ReportClas
 				.withProductionStatus(ProductionStatus.PROD_READY)
 				.build();
 	}
-	
+
+	@Override
 	public void runJob() throws TermServerScriptException {
 		for (Concept c : gl.getAllConcepts()) {
 			if (ignoreOriginalCore && isOriginalCore(c)) {
@@ -79,12 +74,12 @@ public class MultipleModuleAxioms extends TermServerReport implements ReportClas
 			List<AxiomEntry> coreAxioms = c.getAxiomEntries(ActiveState.ACTIVE, false)
 					.stream()
 					.filter(a -> SnomedUtils.inModule(a, INTERNATIONAL_MODULES))
-					.collect(Collectors.toList());
+					.toList();
 			List<AxiomEntry> nonCoreAxioms = c.getAxiomEntries(ActiveState.ACTIVE, false)
 					.stream()
 					.filter(a -> !SnomedUtils.inModule(a, INTERNATIONAL_MODULES))
-					.collect(Collectors.toList());
-			if (coreAxioms.size() > 0 && nonCoreAxioms.size() > 0) {
+					.toList();
+			if (!coreAxioms.isEmpty() && !nonCoreAxioms.isEmpty()) {
 				AxiomEntry firstCoreAxiom = coreAxioms.get(0);
 				for (AxiomEntry a : nonCoreAxioms) {
 					report (c, c.getModuleId(), firstCoreAxiom.getId(), firstCoreAxiom.getEffectiveTime(), a.getId(), a.getEffectiveTime());
